# rust_webapp

./: .gitignore  Cargo.toml  Config.tests.toml  Config.toml  Makefile  README.MD
backend/: Cargo.toml  cli.yaml
backend/src/: database.rs  main.rs
backend/src/server/: mod.rs
backend/tests/: server.rs
docker/: .env.dist  docker-compose.dev.yaml  docker-compose.tests.yaml  docker-compose.yaml
src/: config.rs  lib.rs
tls/: cert.pem  key.pem
